Fix truncation of notification headers
We need a fixed-width CSS table with a number of fixed-width
cells and one cell that takes up the remaining width, with
text truncation. This is a pain to do with CSS tables,
but this trick I found on StackOverflow[1] works well:
wrap the contents of the cell in a div that's position: relative;,
containing another div that's position: absolute; width: 100%;

[1] http://stackoverflow.com/questions/7569436/css-constrain-a-table-with-long-cell-contents-to-page-width

Bug: T140349

--- a/modules/styles/mw.echo.ui.NotificationItemWidget.less
+++ b/modules/styles/mw.echo.ui.NotificationItemWidget.less
@@ -137,7 +137,12 @@
 
 					&-header {
 						.mw-echo-ui-mixin-one-line-truncated;
-						width: @bundled-notification-header-width;
+						width: 100%;
+						position: absolute;
+
+						&-wrapper {
+							position: relative;
+						}
 					}
 				}
 
